  8.1.4 and higher. (Ilia)
- Fixed infinite loop when a wrong color index is given to imagefill (Pierre)
- Fixed mess with CGI/CLI -d option (now it works with cgi; constants are
  working exactly like in php.ini; with FastCGI -d affects all requests).
  (Dmitry)
- Fixed missing open_basedir check inside chdir() function. (Ilia)
- Fixed bug #39035 (Compatibilty issue between DOM and 
  zend.ze1_compatibility_mode). (Rob)
- Fixed bug #39032 (strcspn() stops on null character). (Tony)
- Fixed bug #39017 (foreach(($obj = new myClass) as $v); echo $obj; segfaults).
  (Dmitry)
- Fixed bug #39004 (Fixed generation of config.nice with autoconf 2.60).
  (Ilia)
- Fixed bug #39003 (__autoload() is called for type hinting). (Dmitry, Tony)
- Fixed bug #39001 (ReflectionProperty returns incorrect declaring class for 
  protected properties). (Tony)
- Fixed bug #38996 (PDO_MYSQL doesn't check connections for liveness). (Tony)
- Fixed bug #38993 (Fixed safe_mode/open_basedir checks for
  session.save_path, allowing them to account for extra parameters). (Ilia)
- Fixed bug #38981 (using FTP URLs in get_headers() causes crash). (Tony)
- Fixed bug #38961 (metaphone() results in segmentation fault on NetBSD). 
  (Tony)
- Fixed bug #38963 (Fixed a possible open_basedir bypass in tempnam()). (Ilia)
- Fixed bug #38949 (Cannot get xmlns value attribute). (Rob)
- Fixed bug #38942 (Double old-style-ctor inheritance). (Dmitry)
- Fixed bug #38941 (imap extension does not compile against new version of
  the imap library). (Ilia)
- Fixed bug #38904 (apache2filter changes cwd to /). (Ilia, Hannes)
- Fixed bug #38891 (get_headers() do not work with curl-wrappers). (Ilia)
- Fixed bug #38859 (parse_url() fails if passing '@' in passwd). (Tony)
- Fixed bug #38844 (curl_easy_strerror() is defined only since cURL 7.12.0).
  (Tony)
- Fixed bug #38808 ("maybe ref" issue for current() and others). (Dmitry)
- Fixed bug #38623 (leaks in a tricky code with switch() and exceptions).
  (Dmitry)