@@ -12,6 +12,8 @@ PHP                                                                        NEWS
   working exactly like in php.ini; with FastCGI -d affects all requests).
   (Dmitry)
 - Fixed missing open_basedir check inside chdir() function. (Ilia)
+- Fixed bug #39039 (SSL: fatal protocol error when fetching HTTPS from
+  servers running Google web server). (Ilia)
 - Fixed bug #39035 (Compatibilty issue between DOM and 
   zend.ze1_compatibility_mode). (Rob)
 - Fixed bug #39032 (strcspn() stops on null character). (Tony)
